# src/Mimo.Api.Sdk/Generated/Knowledge/Gaps/GapsRequestBuilder.cs
@@ -1,0 +1,94 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using Microsoft.Kiota.Abstractions;
+using Mimo.Api.Sdk.Models;
+using System.Collections.Generic;
+using System.IO;
+using System.Threading.Tasks;
+using System.Threading;
+using System;
+namespace Mimo.Api.Sdk.Knowledge.Gaps
+{
+    /// <summary>
+    /// Builds and executes requests for operations under \knowledge\gaps
+    /// </summary>
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    public partial class GapsRequestBuilder : BaseRequestBuilder
+    {
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder"/> and sets the default values.
+        /// </summary>
+        /// <param name="pathParameters">Path parameters for the request</param>
+        /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
+        public GapsRequestBuilder(Dictionary<string, object> pathParameters, IRequestAdapter requestAdapter) : base(requestAdapter, "{+baseurl}/knowledge/gaps{?limit*}", pathParameters)
+        {
+        }
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder"/> and sets the default values.
+        /// </summary>
+        /// <param name="rawUrl">The raw URL to use for the request builder.</param>
+        /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
+        public GapsRequestBuilder(string rawUrl, IRequestAdapter requestAdapter) : base(requestAdapter, "{+baseurl}/knowledge/gaps{?limit*}", rawUrl)
+        {
+        }
+        /// <summary>
+        /// Lista los vacíos de conocimiento detectados más recientes (query opcional: limit).
+        /// </summary>
+        /// <returns>A List&lt;global::Mimo.Api.Sdk.Models.KnowledgeGapResponse&gt;</returns>
+        /// <param name="cancellationToken">Cancellation token to use when cancelling requests</param>
+        /// <param name="requestConfiguration">Configuration for the request such as headers, query parameters, and middleware options.</param>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public async Task<List<global::Mimo.Api.Sdk.Models.KnowledgeGapResponse>?> GetAsync(Action<RequestConfiguration<global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder.GapsRequestBuilderGetQueryParameters>>? requestConfiguration = default, CancellationToken cancellationToken = default)
+        {
+#nullable restore
+#else
+        public async Task<List<global::Mimo.Api.Sdk.Models.KnowledgeGapResponse>> GetAsync(Action<RequestConfiguration<global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder.GapsRequestBuilderGetQueryParameters>> requestConfiguration = default, CancellationToken cancellationToken = default)
+        {
+#endif
+            var requestInfo = ToGetRequestInformation(requestConfiguration);
+            var collectionResult = await RequestAdapter.SendCollectionAsync<global::Mimo.Api.Sdk.Models.KnowledgeGapResponse>(requestInfo, global::Mimo.Api.Sdk.Models.KnowledgeGapResponse.CreateFromDiscriminatorValue, default, cancellationToken).ConfigureAwait(false);
+            return collectionResult?.AsList();
+        }
+        /// <summary>
+        /// Lista los vacíos de conocimiento detectados más recientes (query opcional: limit).
+        /// </summary>
+        /// <returns>A <see cref="RequestInformation"/></returns>
+        /// <param name="requestConfiguration">Configuration for the request such as headers, query parameters, and middleware options.</param>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public RequestInformation ToGetRequestInformation(Action<RequestConfiguration<global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder.GapsRequestBuilderGetQueryParameters>>? requestConfiguration = default)
+        {
+#nullable restore
+#else
+        public RequestInformation ToGetRequestInformation(Action<RequestConfiguration<global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder.GapsRequestBuilderGetQueryParameters>> requestConfiguration = default)
+        {
+#endif
+            var requestInfo = new RequestInformation(Method.GET, UrlTemplate, PathParameters);
+            requestInfo.Configure(requestConfiguration);
+            requestInfo.Headers.TryAdd("Accept", "application/json");
+            return requestInfo;
+        }
+        /// <summary>
+        /// Returns a request builder with the provided arbitrary URL. Using this method means any other path or query parameters are ignored.
+        /// </summary>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder"/></returns>
+        /// <param name="rawUrl">The raw URL to use for the request builder.</param>
+        public global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder WithUrl(string rawUrl)
+        {
+            return new global::Mimo.Api.Sdk.Knowledge.Gaps.GapsRequestBuilder(rawUrl, RequestAdapter);
+        }
+        /// <summary>
+        /// Lista los vacíos de conocimiento detectados más recientes (query opcional: limit).
+        /// </summary>
+        [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+        public partial class GapsRequestBuilderGetQueryParameters 
+        {
+            [QueryParameter("limit")]
+            public int? Limit { get; set; }
+        }
+    }
+}
+#pragma warning restore CS0618
