# src/Mimo.Api.Sdk/Generated/Models/KnowledgeGapResponse.cs
@@ -1,0 +1,91 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System;
+namespace Mimo.Api.Sdk.Models
+{
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    #pragma warning disable CS1591
+    public partial class KnowledgeGapResponse : IAdditionalDataHolder, IParsable
+    #pragma warning restore CS1591
+    {
+        /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
+        public IDictionary<string, object> AdditionalData { get; set; }
+        /// <summary>The conversationId property</summary>
+        public Guid? ConversationId { get; set; }
+        /// <summary>The createdAt property</summary>
+        public DateTimeOffset? CreatedAt { get; set; }
+        /// <summary>The id property</summary>
+        public Guid? Id { get; set; }
+        /// <summary>The matchCount property</summary>
+        public int? MatchCount { get; set; }
+        /// <summary>The query property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Query { get; set; }
+#nullable restore
+#else
+        public string Query { get; set; }
+#endif
+        /// <summary>The topSimilarity property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public UntypedNode? TopSimilarity { get; set; }
+#nullable restore
+#else
+        public UntypedNode TopSimilarity { get; set; }
+#endif
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Models.KnowledgeGapResponse"/> and sets the default values.
+        /// </summary>
+        public KnowledgeGapResponse()
+        {
+            AdditionalData = new Dictionary<string, object>();
+        }
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Models.KnowledgeGapResponse"/></returns>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static global::Mimo.Api.Sdk.Models.KnowledgeGapResponse CreateFromDiscriminatorValue(IParseNode parseNode)
+        {
+            if(ReferenceEquals(parseNode, null)) throw new ArgumentNullException(nameof(parseNode));
+            return new global::Mimo.Api.Sdk.Models.KnowledgeGapResponse();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        /// <returns>A IDictionary&lt;string, Action&lt;IParseNode&gt;&gt;</returns>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers()
+        {
+            return new Dictionary<string, Action<IParseNode>>
+            {
+                { "conversationId", n => { ConversationId = n.GetGuidValue(); } },
+                { "createdAt", n => { CreatedAt = n.GetDateTimeOffsetValue(); } },
+                { "id", n => { Id = n.GetGuidValue(); } },
+                { "matchCount", n => { MatchCount = n.GetIntValue(); } },
+                { "query", n => { Query = n.GetStringValue(); } },
+                { "topSimilarity", n => { TopSimilarity = n.GetObjectValue<UntypedNode>(UntypedNode.CreateFromDiscriminatorValue); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer)
+        {
+            if(ReferenceEquals(writer, null)) throw new ArgumentNullException(nameof(writer));
+            writer.WriteGuidValue("conversationId", ConversationId);
+            writer.WriteDateTimeOffsetValue("createdAt", CreatedAt);
+            writer.WriteGuidValue("id", Id);
+            writer.WriteIntValue("matchCount", MatchCount);
+            writer.WriteStringValue("query", Query);
+            writer.WriteObjectValue<UntypedNode>("topSimilarity", TopSimilarity);
+            writer.WriteAdditionalData(AdditionalData);
+        }
+    }
+}
+#pragma warning restore CS0618
